// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constantstatement multiple 1`] = `
Program {
  "children": Array [
    ConstantStatement {
      "constants": Array [
        Constant {
          "kind": "constant",
          "name": Identifier {
            "kind": "identifier",
            "name": "CONSTANT",
          },
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"Hello world!\\"",
            "unicode": false,
            "value": "Hello world!",
          },
        },
        Constant {
          "kind": "constant",
          "name": Identifier {
            "kind": "identifier",
            "name": "OTHER_CONSTANT",
          },
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"Other hello world!\\"",
            "unicode": false,
            "value": "Other hello world!",
          },
        },
      ],
      "kind": "constantstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`constantstatement simple 1`] = `
Program {
  "children": Array [
    ConstantStatement {
      "constants": Array [
        Constant {
          "kind": "constant",
          "name": Identifier {
            "kind": "identifier",
            "name": "CONSTANT",
          },
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"Hello world!\\"",
            "unicode": false,
            "value": "Hello world!",
          },
        },
      ],
      "kind": "constantstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
